feat(web): introduce web management UI and update API key middleware
- Added a web-based management interface for remote administration, including setup instructions and features like dashboard, authentication, and API key management.
- Updated .gitignore to include web UI build artifacts and configuration files.
- Enhanced API key middleware to exempt specific paths and management API callbacks from authentication requirements.
- Mounted static files for the web UI in the FastAPI application.

This commit lays the groundwork for a more user-friendly management experience through the new web interface.

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,13 @@ config.json
 !models.example.json
 !package.json
 !package-lock.json
+!tsconfig.json
+!tsconfig.node.json
+!components.json
+
+# Web UI
+web/node_modules/
+web/dist/
 
 # Environment variables
 .env
@@ -64,3 +71,4 @@ dev-code
 
 *.log
 .spec-workflow
+.cursor
